# ai-news-detector

./: .claudeignore  .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  nkjp_popularity_dict.json  pyproject.toml  requirements.txt
feat/: features.py  test.py
pk_training/basic_popularity_index_stylistic_gemini-2.5-flash/: best_bert_stylistic_model.pt  latest_checkpoint.pt  training_log.txt
pk_training/basic_popularity_index_stylistic_gemini-3-flash-preview/: best_bert_stylistic_model.pt  latest_checkpoint.pt  training_log.txt
pk_training/basic_popularity_index_stylistic_gpt-oss-120b/: best_bert_stylistic_model.pt  latest_checkpoint.pt  training_log.txt
pk_training/basic_popularity_index_stylistic_llama-3.3-70b-instruct-fp8-fast/: best_bert_stylistic_model.pt  (+2 more)
pk_training_run_p_f_gemini-2.5-flash/: best_bert_stylistic_model.pt  latest_checkpoint.pt  training_log.txt
pk_training_run_p_f_gemini-3-flash-preview/: best_bert_stylistic_model.pt  latest_checkpoint.pt  training_log.txt
pk_training_run_p_f_gpt-oss-120b/: best_bert_stylistic_model.pt  latest_checkpoint.pt  training_log.txt
pk_training_run_p_f_llama-3.3-70b-instruct-fp8-fast/: best_bert_stylistic_model.pt  latest_checkpoint.pt  training_log.txt
pk_training_run_p_f_nemotron-3-120b-a12b/: best_bert_stylistic_model.pt  latest_checkpoint.pt  training_log.txt
scripts/: _activate.sh  build.sh  demo.py  install.sh  run.sh  setup.sh  test.sh
src/: build_polish_popularity_dict.py  build_wiki_popularity_dict.py  dataset.py  feature_bert.py  import subprocess.py  load_dataset.py  simple_bert.py  test_model.py  train.py  training_loop.py
tests/: test_pos.py  test_pos_count.py  test_pos_factory.py  test_pos_ratio.py  test_pos_tagger.py  test_punctuation.py  test_punctuation_count.py  test_punctuation_factory.py  test_punctuation_ratio.py  test_syllables.py  test_text_stats.py  test_text_stats_extractors.py  test_text_stats_factory.py  test_text_utils.py
wb_training_run_01/: training_log.txt
wb_training_run_nf_gpt-oss-120b/: training_log.txt
(+54 files in other folders)
