[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-detector"
version = "0.1.0"
description = "Text feature extraction for news authenticity analysis"
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.7",
    "torch==2.11.0+cu126",
    "torchvision==0.26.0+cu126",
    "transformers==5.7.0",
    "scikit-learn==1.8.0"
]

[project.optional-dependencies]
dev = ["pytest>=8"]
pl = ["pl_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/pl_core_news_sm-3.7.0/pl_core_news_sm-3.7.0-py3-none-any.whl"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: integration tests requiring spaCy Polish model"]
